--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
       <a href="contact.html">Contact Us</a>
       <a href="login.html">Login</a>
     </nav>
-    <h3>Oleh Angelika Ruth Simatupang</h3>
+    <h3>Oleh Anni Simorangkir</h3>
   </header>
   <body>
     <table width="100%" cellspacing="30px">
