--- a/challenges.html
+++ b/challenges.html
@@ -22,7 +22,7 @@
       <header>
         <h2>8 Python Code Challenges to Try During Pride</h2>
 
-        <img src="assets/challenges.jpg" alt="Python" width="250" />
+        <img src="assets/img/Challenges.png" alt="Python" width="250" />
       </header>
 
       <p>
@@ -167,7 +167,7 @@
         <ul>
           <li>
             <img
-              src="/assets/Challenges-2.jpeg"
+              src="assets/img/Pride-Day_Blog5.webp"
               alt="related-1"
               width="50"
               height="50"
@@ -182,7 +182,7 @@
 
           <li>
             <img
-              src="/assets/Challenges-3.jpeg"
+              src="assets/img/Pride-Day_R1_Blog1.webp"
               alt="related-2"
               width="50"
               height="50"
